--- a/css/contact.css
+++ b/css/contact.css
@@ -1,10 +1,9 @@
 /*------------------------mobile------------------------------------*/
+
 .banner
 {
 	position: relative;
-	top: 73px;
 	left: 0px;
-	height: 213px;
 	width: 100%;
 	z-index: 0;
 	display: block;
@@ -12,9 +11,6 @@
 
 .banner img
 {
-	position: absolute;
-    top: 0;
-    left: 0;
 	height: 180px;
 	width: 100%;
 }
@@ -22,7 +18,198 @@
 .text-banner h2 {
 	position: relative;
 	width: 75%;
-	top: -35px;
+	top: -75px;
+	left: 25px;
+	font-family: sans-serif;
+	font-style: normal;
+	font-weight: 700;
+	font-size: 3em;
+	color: #fff;
+}
+
+/* content */
+
+#content {
+	height: 850px;
+	padding-left: 8%;
+}
+
+#content .content-left
+{
+	width: 65%;
+}
+
+ #content .content-right
+{
+
+}
+
+#content .content-left h3
+{
+	font-family:sans-serif;
+	font-style:normal;
+	font-weight:700;
+	padding:0px 0 0px 0;
+	margin:0 0 20px 0;
+	font-size:2.8em;
+	line-height:1.2em;
+	color:#323232;
+}
+
+#content .content-left p
+{
+	font-size: 1.6em;
+	font-style:normal;
+	font-family: sans-serif;
+	font-weight: 400;
+	line-height: 1.4em;
+	color: #3A3A3A;
+	padding:0px 0px 0px 0px;
+	margin:0 0 12px 0;
+	text-indent:0px;
+}
+#content .content-left p:last-child {
+	padding-bottom: 10px;
+	border-bottom: dashed 1px #828282;
+}
+
+#content fieldset{
+	border:0;
+}
+
+#content label{
+	width:100%;
+	display:block;
+	line-height:1.9em;
+	font-size:1.4em;
+	font-weight:400;
+	margin:0px 0px 6px 0px;
+}
+
+#content .group input{
+	display:block;
+	font-size:1.4em;
+	line-height:1.5em;
+	color:#414042;
+	font-style:normal;
+	font-weight:400;
+	width:220px;
+	height:30px;
+	padding:5px 0px 0px 0px;
+	border:solid 1px #C6C6C6;
+	margin:0px 0px 15px 0px;
+	box-shadow:inset 0px 1px 3px rgba(147, 147, 147, 0.5);
+}
+
+#content textarea{
+	width: 240px;
+	display:block;
+	color:#414042;
+	font-style:normal;
+	font-weight:400;
+	padding:5px 0px 0px 0px;
+	border:solid 1px #C6C6C6;
+	margin:0px 0px 50px 0px;
+	box-shadow:inset 0px 1px 3px rgba(147, 147, 147, 0.5);
+	font-family:monospace;
+}
+
+#content .button{
+	float:left;
+	font-style:normal;
+	font-weight:700;
+	font-size:1em;
+	color:#fff;
+	background:#5FC8DB;
+	text-transform:uppercase;
+	padding:10px;
+	border:0;
+	letter-spacing:0.08em;
+	text-shadow:1px 1px 1px rgba(0, 0, 0, 0.08);
+	text-align:center;
+	cursor:pointer;
+}
+
+#content .content-item {
+	float:left;
+	width:300px;
+	height:260px;
+	position:relative;
+	left:2%;
+	margin-right:2%;
+	margin-bottom: 2%;
+}
+
+#content .overlay {
+    background: none repeat scroll 0 0 #000000;
+    height: 260px;
+    opacity: 0.3;
+    position: absolute;
+    width: 300px;
+}
+#content .title {
+	position:absolute;
+	font-size:200%;
+	width:100%;
+	top:43%;
+	left: 11%;
+}
+#content .title a {
+	color:#FFF;
+}
+
+#content .details {
+	position:absolute;
+    top: 55px;
+    text-align: center;
+    width: 300px;
+}
+#content .details a {
+	color: #FFFFFF;
+	font-size: 16px;
+	line-height:30px;
+}
+#content .action {
+	text-align: center;
+    text-transform: uppercase;
+	position:absolute;
+	top:180px;
+	left:65px;
+}
+
+#content #action-learnmore {
+	left: 90px;
+}
+
+#content .action a {
+	background: none repeat scroll 0 0 #B13279;
+	padding: 12px 20px;
+	font-size: 12px;
+	color:#FFF;
+}
+
+@media screen and (min-width: 476px) {
+
+
+.banner
+{
+	position: relative;
+	left: 0px;
+	width: 100%;
+	z-index: 0;
+	display: block;
+}
+
+.banner img
+{
+	height: 180px;
+	width: 100%;
+}
+
+.text-banner h2 {
+	position: relative;
+	width: 75%;
+	top: -75px;
 	left: 25px;
 	font-family: sans-serif;
 	font-style: normal;
@@ -34,7 +221,6 @@
 /* content */
 
 #content {
-	margin-top:20px;
 	height: 850px;
 	padding-left: 11%;
 }
@@ -192,6 +378,8 @@
 	color:#FFF;
 }
 
+}
+
 /*------------------------for ipad------------------------------------*/
 @media screen and (min-width: 712px ) {
 
@@ -202,24 +390,31 @@
 	top:132px;
 }
 
+.banner img
+{
+	position: absolute;
+    top: 0;
+    left: 0;
+ }
+
 .text-banner h2 {
 	font-size: 5em;
-	left: 100px;
-	bottom: 120px;
+	left: 0;
+	top: 150px;
 }
 
 /* content */
 
 #content {
-	margin-top:115px;
-	height: 590px;
+	position: relative;
+	top:160px;
+	height: 745px;
 	padding:0;
 }
 
 #content .content-left
 {
 	position: absolute;
-	width: 50%;
 	height: 480px;
 }
 
@@ -264,8 +459,8 @@
 }
 
 #content {
-	margin-top:115px;
-	height: 468px;
+	top:115px;
+	height: 580px;
 }
 
 #content .content-left
