--- a/css/about-ourstory.css
+++ b/css/about-ourstory.css
@@ -1,179 +1,249 @@
+/*------------------------mobile------------------------------------*/
 
-#banner
+.banner
 {
-	position:relative;
-	top:74px;
-	left:0px;
-	height:420px;
-	width:100%;
-	z-index:50;
-	display:block;
+	position: relative;
+	left: 0px;
+	width: 100%;
+	z-index: 0;
+	display: block;
 }
 
-#banner img
+.banner img
 {
-	position:absolute;
-    top:0;
-    left:0;
-	height:420px;
-	width:100%;
+	height: 180px;
+	width: 100%;
 }
 
-.textbanner
-{
-	padding:0;
-	top:0;
-	display:block;
-	z-index:95;
-	height: 420px;
-}
-
-.textbanner h2
-{
+.text-banner h2 {
+	position: relative;
+	width: 75%;
+	top: -75px;
+	left: 25px;
 	font-family: sans-serif;
-	font-style:normal;
-	font-size: 5.8em;
-	position: absolute;
-	color: white;
-	bottom: 90px;
+	font-style: normal;
+	font-weight: 700;
+	font-size: 3em;
+	color: #fff;
 }
 
 /* content */
 
-#content {
-	margin-top:115px;
-	height: 300px;
+#content a {
+	color: #B13279;
 }
 
-.content-left
+#content .content-left a:hover {
+	color: #7C1457;
+}
+
+#content {
+	height: 685px;
+	padding-left: 10%;
+}
+
+#content .content-left
+{
+	width: 70%;
+}
+
+#content .content-left h3
+{
+	font-family:sans-serif;
+	font-style:normal;
+	font-weight:700;
+	padding:0px 0 0px 0;
+	margin:0 0 20px 0;
+	font-size:2.8em;
+	line-height:1.2em;
+	color:#323232;
+}
+
+#content .content-left p
+{
+	font-size: 1.6em;
+	font-style:normal;
+	font-family: sans-serif;
+	font-weight: 400;
+	line-height: 1.4em;
+	color: #3A3A3A;
+	padding:0px 0px 0px 0px;
+	margin:0 0 12px 0;
+	text-indent:0px;
+}
+
+
+
+#content .content-item {
+	float:left;
+	width:240px;
+	height:240px;
+	position:relative;
+}
+
+#content .overlay {
+    background: none repeat scroll 0 0 #000000;
+    height: 208px;
+    opacity: 0.3;
+    position: absolute;
+    width: 240px;
+}
+#content .title {
+	position:absolute;
+	font-size:200%;
+	width:100%;
+	top:43%;
+}
+#content .title a {
+	color:#FFF;
+}
+
+#content .details {
+	opacity: 0;
+	position:absolute;
+    top: 55px;
+    text-align: center;
+    width: 300px;
+}
+#content .details a {
+	color: #FFFFFF;
+	font-size: 16px;
+	line-height:30px;
+}
+#content .action {
+	opacity: 0;
+	text-align: center;
+    text-transform: uppercase;
+	position:absolute;
+	top:180px;
+	left:65px;
+}
+
+@media screen and (min-width: 476px) {
+
+/* content */
+
+#content {
+	padding-left: 15%;
+}
+
+#content .content-item {
+	width:300px;
+	height:260px;
+}
+
+#content .overlay {
+    height: 260px;
+    width: 300px;
+}
+
+#content .title {
+	left: 10%;
+}
+
+#content .details {
+	opacity: 1;
+}
+
+#content .action {
+	opacity: 1;
+}
+
+#content #action-learnmore {
+	left: 90px;
+}
+
+#content .action a {
+	background: none repeat scroll 0 0 #B13279;
+	padding: 12px 20px;
+	font-size: 12px;
+	color:#FFF;
+}
+
+}
+
+/*------------------------for ipad------------------------------------*/
+@media screen and (min-width: 712px ) {
+
+.banner, .banner img{
+	height:420px;
+}
+.banner {
+	top:132px;
+}
+
+.banner img
+{
+	position: absolute;
+    top: 0;
+    left: 0;
+ }
+
+.text-banner h2 {
+	font-size: 5em;
+	left: 0;
+	top: 150px;
+}
+
+#content {
+	position: relative;
+	top:160px;
+	padding:0;
+}
+
+#content .content-left
+{
+	position: absolute;
+	width: 50%;
+}
+
+ #content .content-right
+{
+	position: absolute;
+	left: 53%;
+}
+
+
+}
+
+/*------------------------------for desktop------------------------------*/
+
+@media screen and (min-width: 1009px ) {
+
+.banner {
+	top:74px;
+}
+
+.text-banner h2 {
+	font-size: 5.8em;
+	left: 0;
+}
+
+#content {
+	top:115px;
+	height: 580px;
+}
+
+#content .content-left
 {
 	position: absolute;
 	width: 65%;
 	height: 260px;
 }
 
-.content-right
+#content .content-right
 {
 	position: absolute;
-	left: 65%;
+	left: 67%;
 }
 
-.content-left .p1
-{
-	font-family: sans-serif;
-	font-style: normal;
-	font-weight: 700;
-	padding: 0px;
-	margin: 0px 0px 20px;
-	font-size: 2.8em;
-	line-height: 1.2em;
-	color: rgb(50, 50, 50);
-}
-
-.content-left .p2
-{
-	font-size: 1.6em;
-	font-family:sans-serif;
-	font-style: normal;
-	font-weight: 400;
-	margin: 0px 0px 25px;
-}
-
-#content #div{
+#content .left{
 	float:left;
-	width:300px;
-	height:260px;
-	position:relative;
-	margin-bottom:20px;
-	left:10%;
-	margin-left:2%;
-	text-align: center;
-}
-#content .overlay {
-    background: none repeat scroll 0 0 #000000;
-    height: 260px;
-    opacity: 0.3;
-    position: absolute;
-    width: 300px;
-}
-#content #title {
-	position:absolute;
-	font-size:200%;
-	width:100%;
-}
-#content #title a {
-	color:#FFF;
-}
-#content #tHover {
-	position:absolute;
-    margin-top: 55px;
-    padding: 0 36px;
-    text-align: center;
-    width: 228px;
-	visibility:hidden;
-}
-#content #tHover a {
-	color: #FFFFFF;
-	font-size: 16px;
-	line-height:30px;
-}
-#content #bHover {
-	text-align: center;
-    text-transform: uppercase;
-	position:absolute;
-	top:180px;
-	left:60px;
-	visibility:hidden;
-}
-#content #bHover a {
-	background: none repeat scroll 0 0 #B13279;
-	padding: 12px 20px;
-	font-size: 12px;
-	color:#FFF;
-}
-#content .title1 {
-	top:43%;
 }
 
-#content .title2 {
-	top:43%;
+#content .right{
+	float:right;
+	margin-left:17px;
 }
 
-#content .title3 {
-	background:none repeat scroll 0 0 #000;
-}
-#content .bHover2 {
-	margin-top:20px;
-	margin-left:10%;
-}
-#content #row {
-	width:100%;
-	text-align:left;
-	margin-top:40px;
-}
-#content .row3 {
-	padding-top:12px;
-}
-#content .img {
-	height:54px;
-	width:54px;
-	background:none repeat scroll 0 0 #EEEEEE;
-	position:absolute;
-}
-
-#content .date {
-	color: #6D6E71;
-	font-size: 11px;
-    text-transform: uppercase;
-	margin-left:23%;
-}
-#content .address {
-	margin-left:23%;
-}
-#content .address a {
-	color: #B13279;
-	font-size:12px;
-}
-#content .address a:hover {
-	color:#7C1457;
 }
