--- a/css/order.css
+++ b/css/order.css
@@ -1,11 +1,10 @@
 
-/*------------------------mobile------------------------------------*/
+//*------------------------mobile------------------------------------*/
+
 .banner
 {
 	position: relative;
-	top: 74px;
 	left: 0px;
-	height: 213px;
 	width: 100%;
 	z-index: 0;
 	display: block;
@@ -13,9 +12,6 @@
 
 .banner img
 {
-	position: absolute;
-    top: 0;
-    left: 0;
 	height: 180px;
 	width: 100%;
 }
@@ -23,74 +19,69 @@
 .text-banner h2 {
 	position: relative;
 	width: 75%;
-	top: 95px;
+	top: -75px;
 	left: 25px;
 	font-family: sans-serif;
 	font-style: normal;
 	font-weight: 700;
-	font-size: 3.5em;
+	font-size: 3em;
 	color: #fff;
 }
 
-
-#content .content-item {
-	float:left;
-	width:300px;
-	height:260px;
-	position:relative;
-	left:2%;
-	margin-right:2%;
-	margin-bottom: 2%;
-}
-
-
-
 /* content */
-
 #content {
-	margin-top:70px;
 	height: 500px;
 	padding-left: 10%;
 }
 
 #content .content-left
 {
-	width: 80%;
-	height: 235px;
+	width: 70%;
 }
 
 #content .content-left p
 {
-	font-size: 1.9em;
+	font-size: 1.6em;
+	font-style:normal;
 	font-family: sans-serif;
-	font-weight: 200;
+	font-weight: 400;
 	line-height: 1.4em;
 	color: #3A3A3A;
+	padding:0px 0px 0px 0px;
+	margin:0 0 12px 0;
+	text-indent:0px;
 }
 #content .content-left p:last-child {
 	padding-bottom: 10px;
 	border-bottom: dashed 1px #828282;
 }
 
+#content .content-item {
+	float:left;
+	width:240px;
+	height:240px;
+	position:relative;
+}
+
 #content .overlay {
     background: none repeat scroll 0 0 #000000;
-    height: 260px;
+    height: 208px;
     opacity: 0.3;
     position: absolute;
-    width: 300px;
+    width: 240px;
 }
 #content .title {
 	position:absolute;
 	font-size:200%;
 	width:100%;
 	top:43%;
-	left: 11%;
 }
 #content .title a {
 	color:#FFF;
 }
 
 #content .details {
+	opacity: 0;
 	position:absolute;
     top: 55px;
     text-align: center;
@@ -102,11 +93,42 @@
 	line-height:30px;
 }
 #content .action {
+	opacity: 0;
 	text-align: center;
     text-transform: uppercase;
 	position:absolute;
 	top:180px;
 	left:65px;
+}
+
+@media screen and (min-width: 476px) {
+
+/* content */
+
+#content {
+	padding-left: 15%;
+}
+
+#content .content-item {
+	width:300px;
+	height:260px;
+}
+
+#content .overlay {
+    height: 260px;
+    width: 300px;
+}
+
+#content .title {
+	left: 10%;
+}
+
+#content .details {
+	opacity: 1;
+}
+
+#content .action {
+	opacity: 1;
 }
 
 #content #action-learnmore {
@@ -120,7 +142,7 @@
 	color:#FFF;
 }
 
-
+}
 
 /*------------------------for ipad------------------------------------*/
 @media screen and (min-width: 712px ) {
@@ -129,35 +151,42 @@
 	height:420px;
 }
 .banner {
+	position: relative;
 	top:132px;
 }
 
+.banner img
+{
+	position: absolute;
+    top: 0;
+    left: 0;
+ }
+
 .text-banner h2 {
 	font-size: 5em;
-	top: 305px;
+	left: 0;
+	top: 150px;
 }
 
-/* content */
-
 #content {
-	margin-top:155px;
-	height: 261px;
-	padding: 0;
+	position: relative;
+	top:160px;
+	padding:0;
+	height: 450px;
 }
 
 #content .content-left
 {
 	position: absolute;
-	width: 39%;
-	height: 205px;
-	left: 60px;
+	width: 50%;
 }
 
-#content .content-right
+ #content .content-right
 {
 	position: absolute;
-	left: 55%;
+	left: 53%;
 }
+
 
 }
 
@@ -173,11 +202,10 @@
 	font-size: 5.8em;
 	left: 0;
 }
-/* content */
 
 #content {
-	margin-top:115px;
-	height: 300px;
+	top:120px;
+	height: 400px;
 }
 
 #content .content-left
@@ -185,26 +213,21 @@
 	position: absolute;
 	width: 65%;
 	height: 260px;
-	left: 0;
 }
 
 #content .content-right
 {
 	position: absolute;
-	left: 65%;
+	left: 67%;
 }
 
-#content .content-left p
-{
-	font-size: 1.9em;
-	font-family: sans-serif;
-	font-weight: 200;
-	line-height: 1.4em;
-	color: #3A3A3A;
+#content .left{
+	float:left;
 }
-#content .content-left p:last-child {
-	padding-bottom: 10px;
-	border-bottom: dashed 1px #828282;
+
+#content .right{
+	float:right;
+	margin-left:17px;
 }
 
 }
