--- a/css/about-base.css
+++ b/css/about-base.css
@@ -1,25 +1,28 @@
 /*------------------------mobile------------------------------------*/
 
-.banner
+.main-content .banner
 {
-	position: relative;
 	left: 0px;
 	width: 100%;
 	z-index: 0;
 	display: block;
 }
 
-.banner img
+.main-content .banner img
 {
 	height: 180px;
 	width: 100%;
+	position: relative;
 }
 
-.text-banner h2 {
-	position: relative;
-	width: 75%;
-	top: -75px;
-	left: 25px;
+.main-content .text-banner {
+	position:absolute;
+	top: 200px;
+	left: 45px;
+
+}
+
+.main-content .text-banner h2 {
 	font-family: sans-serif;
 	font-style: normal;
 	font-weight: 700;
@@ -28,89 +31,86 @@
 }
 
 /* content */
+.main-content #content {
+	padding-left: 10%;
+	margin-top: 20px;
+}
 
-#content a {
+.main-content .content-left a {
 	color: #B13279;
 }
 
-#content .content-left a:hover {
+.main-content .content-left a:hover {
 	color: #7C1457;
 }
 
-#content {
-	height: 3450px;
-	padding-left: 10%;
-}
-
-#content .content-left
+.main-content #content .content-left
 {
 	width: 70%;
 }
 
-#content .content-left h3
+.main-content #content .content-left h3
 {
 	font-family:sans-serif;
 	font-style:normal;
 	font-weight:700;
 	padding:0px 0 0px 0;
 	margin:0 0 20px 0;
-	font-size:2.5em;
+	font-size:2.8em;
 	line-height:1.2em;
 	color:#323232;
 }
 
-#content .content-left p
+.main-content #content .content-left p
 {
-	font-size: 1.5em;
+	font-size: 1.6em;
 	font-style:normal;
 	font-family: sans-serif;
 	font-weight: 400;
 	line-height: 1.4em;
 	color: #3A3A3A;
 	padding:0px 0px 0px 0px;
-	margin:0 0 25px 0;
+	margin:0 0 12px 0;
 	text-indent:0px;
 }
 
-
-
-#content .content-item {
-	float:left;
+.main-content .content-item {
 	width:240px;
-	height:240px;
+	height:208px;
 	position:relative;
+
 }
 
-#content .overlay {
+.main-content .overlay {
     background: none repeat scroll 0 0 #000000;
     height: 208px;
     opacity: 0.3;
     position: absolute;
     width: 240px;
 }
-#content .title {
+.main-content .title {
 	position:absolute;
 	font-size:200%;
 	width:100%;
 	top:43%;
 }
-#content .title a {
+.main-content .title a {
 	color:#FFF;
 }
 
-#content .details {
+.main-content .details {
 	opacity: 0;
 	position:absolute;
     top: 55px;
     text-align: center;
     width: 300px;
 }
-#content .details a {
+.main-content .details a {
 	color: #FFFFFF;
 	font-size: 16px;
 	line-height:30px;
 }
-#content .action {
+.main-content .action {
 	opacity: 0;
 	text-align: center;
     text-transform: uppercase;
@@ -119,42 +119,63 @@
 	left:65px;
 }
 
+.main-content .action a {
+	background: none repeat scroll 0 0 #B13279;
+	padding: 12px 20px;
+	font-size: 12px;
+	color:#FFF;
+}
+/* for ourteams page*/
+#content ul{
+	margin:0 0 7px 0px;
+}
+#content ul li {
+	list-style: none;
+	background: url(../img/icon_bullet-arrow.gif) no-repeat 0 6px;
+	padding: 0 0 5px 15px;
+	margin-top: 0;
+	font-size: 1.4em;
+	line-height: 1.4em;
+	color: #474747;
+}
+/**/
+
+
 @media screen and (min-width: 476px) {
 
 /* content */
 
-#content {
+.main-content #content {
 	padding-left: 15%;
-	height
 }
 
-#content .content-item {
+.main-content #content .content-item {
 	width:300px;
 	height:260px;
 }
 
-#content .overlay {
+.main-content #content .overlay {
     height: 260px;
     width: 300px;
 }
 
-#content .title {
+.main-content #content .title {
 	left: 10%;
 }
 
-#content .details {
+.main-content #content .details {
 	opacity: 1;
 }
 
-#content .action {
+.main-content #content .action {
 	opacity: 1;
 }
 
-#content #action-learnmore {
+.main-content #content #action-learnmore {
 	left: 90px;
 }
 
-#content .action a {
+.main-content #content .action a {
 	background: none repeat scroll 0 0 #B13279;
 	padding: 12px 20px;
 	font-size: 12px;
@@ -165,45 +186,34 @@
 
 /*------------------------for ipad------------------------------------*/
 @media screen and (min-width: 712px ) {
-
-.banner, .banner img{
+ 
+.main-content .banner img{
 	height:420px;
 }
-.banner {
-	top:132px;
+
+.main-content .text-banner {
+	top: 400px;
 }
 
-.banner img
-{
-	position: absolute;
-    top: 0;
-    left: 0;
- }
-
-.text-banner h2 {
+.main-content .text-banner h2 {
 	font-size: 5em;
-	left: 0;
+	top: -100px;
 }
 
-#content {
-	position: relative;
-	top:160px;
+.main-content #content {
 	padding:0;
-	height: 3150px;
 }
 
-#content .content-left
+.main-content #content .content-left
 {
-	position: absolute;
-	width: 50%;
+	width: 55%;
+	float: left;
 }
 
- #content .content-right
+.main-content #content .content-right
 {
-	position: absolute;
-	left: 53%;
+	float: right;
 }
-
 
 }
 
@@ -211,40 +221,9 @@
 
 @media screen and (min-width: 1009px ) {
 
-.banner {
-	top:74px;
-}
-
-.text-banner h2 {
+.main-content .text-banner h2 {
 	font-size: 5.8em;
 	left: 0;
 }
-
-#content {
-	top:50px;
-	height: 2635px;
 }
 
-#content .content-left
-{
-	position: absolute;
-	width: 60%;
-	height: 260px;
-}
-
-#content .content-right
-{
-	position: absolute;
-	left: 67%;
-}
-
-#content .left{
-	float:left;
-}
-
-#content .right{
-	float:right;
-	margin-left:17px;
-}
-
-}
