--- a/css/blog.css
+++ b/css/blog.css
@@ -1,29 +1,23 @@
-.slides-overlay{
-	height: 150px;
-
-}
+/*------------------------mobile------------------------------------*/
 #banner-wrapper #banner{
-	position: relative;
-	top:73px;
 	width: 100%;
 	z-index: 0;
-	height: 198px;
+	height: 150px;
 	background-color: #60c6da;
 	background: url(../img/bg_blog-header.gif) no-repeat top right;
 }
 
-
-#banner .text-banner  {
-	height: 160px;
+#banner .text-banner {
+	position: relative;
+	width: 75%;
+	top: 95px;
+	left: 50px;
 }
 #banner .text-banner h2{
-	position: absolute;
-	bottom: 30px;
-	left: 15px;
 	font-family: sans-serif;
 	font-style: normal;
 	font-weight: 700;
-	font-size: 5.8em;
+	font-size: 3em;
 	color: #fff;
 }
 #banner .text-banner a {
@@ -41,35 +35,24 @@
 	font-weight: 400;
 	padding: 0px 0px 0px 0px;
 	margin: 0 0 12px 0;
-	font-size: 1.6em;
+	font-size: 1.5em;
 	line-height: 1.4em;
 	text-indent: 0px;
 	color: #3A3A3A;
 }
 
 .blog-wrapper {
-	width: 100%;
-	height: 3850px;
-}
-
-.blog-wrapper .body-text {
-	float: left;
 	position: relative;
-	left: 146px;
-	top: 26px;
+	width: 100%;
+	padding: 0;
 }
-
 .blog-wrapper .main {
-	float: left;
-	background: #fff;
-	width: 700px;
-	padding-left: 15px;
+	margin: 30px 0 0 50px;
+	width: 290px;
 }
 
 .main .content {
-	margin-top: 35px;
-	float: left;
-	width: 625px;
+	width: 100%;
 }
 
 article {
@@ -83,7 +66,7 @@ article {
 	font-weight: 700;
 	padding: 0px 0 0px 0;
 	margin: 0 0 10px 0;
-	font-size: 2.8em;
+	font-size: 2.3em;
 	line-height: 1.2em;
 	color: #323232;
 }
@@ -117,7 +100,6 @@ article {
 	margin: 0 30px 30px 0;
 }
 .body-text .pagination {
-	float: left;
 	margin: 0 0 100px;
 	padding: 0;
 	width: 100%;
@@ -154,21 +136,13 @@ article {
 }
 
 .blog-wrapper .sidebar {
-	height: 3848px;
-	min-height: 900px;
 	border-left: solid 1px #D8D8D8;
 	background: url(../img/bg_white-pattern.gif) repeat;
 }
 .sidebar .content {
-	float: left;
 	width: 215px;
-	padding: 40px 15px 0 28px;
+	margin-left: 50px;
 
-}
-.sidebar .sidebar-base {
-	float: left;
-	width: 100%;
-	margin: 0 0 40px;
 }
 
 .body-text h4 {
@@ -234,17 +208,51 @@ article {
 	margin: 0 0 5px 0;
 	background: 0;
 }
+#footer {
+	margin: 0;
+}
+@media screen and (min-width: 476px) {
 
-.right-col {
-	margin-top: 27px;
+.blog-wrapper .main, .sidebar .content {
+	margin: 30px 0 0 70px;
+	width: 75%;
+}
+
+
+}
+
+/*------------------------for ipad------------------------------------*/
+@media screen and (min-width: 712px ) {
+
+.slides-overlay{
+	height: 150px;
+}
+
+.blog-wrapper .main, .sidebar .content {
+	margin: 30px 0 0 20px;
+	width: 90%;
+}
+#banner .text-banner { 
+	top: 60px;
+}
+
+#banner .text-banner h2 {
+	font-size: 5em;
+}
+
+}
+
+/*------------------------------for desktop------------------------------*/
+
+@media screen and (min-width: 1009px ) {
+
+.main .content {
+	width: 60%;
+	float: left;
+	margin: 0 0 0 13%;
+}
+.blog-wrapper .sidebar {
 	float: right;
-	z-index: 0;
-	height: 3848px;
-	display: inline-block;
-	vertical-align: top;
-	min-height: 900px;
-	width: 15%;
-	background: url(../img/bg_white-pattern.gif) repeat;
-
+}
 }
 
