--- a/css/base.css
+++ b/css/base.css
@@ -117,6 +117,9 @@ body {
 	padding: 15px;
 }
 
+.navigation li.top-menu:last-child {
+	border-bottom: 0;
+}
 .navigation ul li.top-menu >a{
 	width: 92%;
 	padding: 14px 4%;
