--- a/css/contact.css
+++ b/css/contact.css
@@ -41,9 +41,14 @@
 	font-weight:400;
 	padding:5px 0px 0px 0px;
 	border:solid 1px #C6C6C6;
-	margin:0px 0px 50px 0px;
+	margin:0 0 10px 0
+	;
 	box-shadow:inset 0px 1px 3px rgba(147, 147, 147, 0.5);
 	font-family:monospace;
+}
+
+#content .butt {
+	margin: 20px 0;
 }
 
 #content .button{
@@ -54,12 +59,15 @@
 	color:#fff;
 	background:#5FC8DB;
 	text-transform:uppercase;
-	padding:10px;
+	padding:20px;
 	border:0;
 	letter-spacing:0.08em;
 	text-shadow:1px 1px 1px rgba(0, 0, 0, 0.08);
 	text-align:center;
 	cursor:pointer;
+}
+#content span.error-message {
+	color: red;
 }
 
 @media screen and (min-width: 476px) {
